--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,17 +6,40 @@
   </h1>
   <h2><%= mail_to(@user.email) %></h2>
   <h3>Member Since</h3>
-    <p>
+    <h4>
     <%= @user.created_at.strftime("%B %Y") %>
-    </p>
+    </h4>
 
   <div class="actions">
-    <%= link_to "Edit Account", edit_user_path(@user), 
-                    class: "button edit"%>
-    <%= link_to "Delete Account", @user,
-          data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
-          class: "button delete"  %>
-                    
+    <% if current_user?(@user) %>
+        <%= link_to "Edit Account", edit_user_path(@user), 
+                        class: "button edit"%>
+    <% end %>
+    <% if current_user_admin? %>
+        <%= link_to "Delete Account", @user,
+              data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
+              class: "button delete"  %>                   
+    <% end %>
   </div>
+
+  <% if @reviews.present? %>
+    <h3>Reviews</h3>
+    <% @reviews.each do |review| %>
+      <div class="review">
+        <div class="details">
+          <span class="title">
+            <%= link_to review.movie.title, review.movie %>
+          </span>
+          <%= render "shared/stars", percent: review.stars_as_percent %>
+          <span class="date">
+            <%= time_ago_in_words(review.created_at) %> ago
+          </span>
+          <p>
+            <%= review.comment %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 
 </section>
